<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="greeaccount_read_permission">com.gree.provider.account.user.read</string>
    <string name="greeaccount_write_permission">com.gree.provider.account.user.write</string>
    <string name="address_write_permission">com.gree.provider.account.address.write</string>
    <string name="address_read_permission">com.gree.provider.account.address.read</string>
    <string name="api_permission">com.gree.greeaccount.api</string>
    <string name="gree_app_name">Gree Account</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="login">Log in</string>
    <string name="confim">Determine</string>
    <string name="send">Send</string>
    <string name="register">Register</string>
    <string name="ok">Complete</string>
    <string name="pwd_reset_complete">Complete</string>
    <string name="next_step">Next step</string>
    <string name="male_text">Male</string>
    <string name="female_text">female</string>
    <string name="net_error">abnormal</string>
    <string name="grally_error">gallery not available</string>
    <string name="camera_error">camera not available</string>
    <string name="no_emoji">Can\'t input Emoticons</string>
    <string name="max_length">The maximum length has been reached</string>
    <string name="phone_error">The format of the phone number is not correct</string>
    <string name="rsp_token_error">The authentication token is invalid. Please log in from the new log</string>
    <string name="rsp_sms_error">Validation code is invalid</string>
    <string name="rsp_account_no_ex">User does not exist</string>
    <string name="rsp_to_auth_error">Identity authentication failure</string>
    <string name="rsp_auth_error">Different user over power operation</string>
    <string name="rsp_phone_check_error">Cell phone number verification disagreement</string>
    <string name="rsp_phone_has_bind">Cell phone number is bound</string>
    <string name="rsp_token_reflash">Refresh token is invalid</string>
    <string name="rsp_email_has_bind">Mailbox is bound</string>
    <string name="rsp_account_error">The account information is not consistent and the device nickname can not be modified</string>
    <string name="rsp_logout">Mandatory withdrawal of equipment</string>
    <string name="rsp_pwd_reset">The password has been reset</string>
    <string name="rsp_account_name_error">Incorrect username format</string>
    <string name="rsp_account_name_only_one">The username can only be modified once</string>
    <string name="logout_alert">Login exception prompt</string>
    <string name="logout_alert_content">Your Gree account\"<xliff:g id="account">%1$s</xliff:g>\"at \"<xliff:g id="time">%2$s</xliff:g>\"The upper limit of the login is exceeded. If this is not your operation, your password is likely to have leaked out. Please log in to the Gree cell phone number as soon as possible to modify the password, or access "phone.gree.com" through the browser, and login the account to do the operation.</string>
    <string name="logout_num_out_alert_content">Your Gree account\"<xliff:g id="account">%1$s</xliff:g>\"at\"<xliff:g id="time">%2$s</xliff:g>\"Asked to exit the login. If this is not your operation, your password is likely to have been leaked. Please log in to the Gree phone number as soon as possible, modify the password, or access "phone.gree.com" through the browser, and login the account to do the operation.</string>
    <string name="logout_pwd_reset_alert_content">Your Gree account\"<xliff:g id="account">%1$s</xliff:g>\"at\"<xliff:g id="time">%2$s</xliff:g>\"The password was modified. If this is not your operation, your password is likely to have been leaked. Please log in to the Gree phone number as soon as possible, modify the password, or access "phone.gree.com" through the browser, and login the account to do the operation.</string>
    <string name="pwd_reset_alert_content">Your password has been modified</string>
    <string name="get_auth_code">Get the verifying code</string>
    <string name="reget_auth_code">Recapture</string>
    <string name="permissions_title">In the process of running, the program needs to use the authority to read short message authentication code and get the serial number of the mobile phone, jump to get</string>
    <string name="no_app_active">No corresponding application</string>
    <string name="user_agreement">User protocol</string>
    <string name="alert_notice_item_1">1. the use of the software in the process of the need to connect the network, the cost of the flow of traffic will be charged between the operators, the details of the information you belong to the operator.</string>
    <string name="alert_notice_item_2">2. software in the process of use, in the premise of your consent, you will collect your geographical location and contact information to provide better life services.</string>
    <string name="alert_notice_item_3">3. using the software means you agree to accept the Gree User License Agreement and the Gree privacy policy.</string>
    <string name="alert_notice_item_3_start">3. use the software to show that you agree to accept</string>
    <string name="gree_user_agreement">Gree user licensing agreement</string>
    <string name="and">and</string>
    <string name="gree_privacy_policy">Gree privacy policy</string>
    <string name="first_title">You can enjoy more services by logging in to your account</string>
    <string name="first_gree_cloud">Gree cloud</string>
    <string name="first_gree_cloud_des">Mobile data data sync Gree cloud</string>
    <string name="first_gree_findphone">Look up a cell phone</string>
    <string name="first_gree_findphone_des">Mobile phone lost remote lock machine</string>
    <string name="first_gree_feedback">After-sale service</string>
    <string name="first_gree_feedback_des">Special service for mobile phone after sale</string>
    <string name="first_gree_bbs">Gree Forum</string>
    <string name="first_gree_bbs_des">Mastering the latest Gree mobile information</string>
    <string name="first_gree_function_coming">Coming online...</string>
    <string name="password_rule">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="register_gree_account">Register Gree account</string>
    <string name="input_phone">Enter the cell phone number</string>
    <string name="input_email">Enter the mailbox number</string>
    <string name="bind_phone">Bind cell phone number</string>
    <string name="input_account">Mobile phone number/mailbox number/username</string>
    <string name="has_read_agree_agreement">I have read and agree&#160;</string>
    <string name="user_register_agreement">user registration protocol</string>
    <string name="input_sms_code">Input verification code</string>
    <string name="get_sms_code">Get the verifying code</string>
    <string name="pwd_set">Password setting</string>
    <string name="pwd_type">To improve account security, please use letters, numbers and symbols</string>
    <string name="pwd_lenght">Password length requires 6-30 bit characters</string>
    <string name="input_pwd">Input password</string>
    <string name="reigster_problem">Registration is a problem</string>
    <string name="has_registered">Account has been registered</string>
    <string name="no_registered">Account number is not registered</string>
    <string name="confim_pwd">Reconfirm the password</string>
    <string name="pwd_error">Incorrect password format</string>
    <string name="confim_pwd_error">Confirm the incorrect password</string>
    <string name="sms_code_error">Verifying code format is incorrect</string>
    <string name="agree_the_agreement">Please check the user registration protocol</string>
    <string name="login_gree_account">Log in to the Gree account</string>
    <string name="account_name_error">Account name can not be empty</string>
    <string name="login_register_width_problem">Login/register problems</string>
    <string name="login_width_problem">Do you encounter problems with login?</string>
    <string name="wifi_not_connent">Network is not available, do you go to set up WLAN?</string>
    <string name="gotos">Go to</string>
    <string name="input_new_pwd">Please enter a new password</string>
    <string name="input_bind_phone">Please enter the bound cell phone number</string>
    <string name="find_pwd_by_email">Mailbox retrieves the password</string>
    <string name="input_bind_email">The authentication mail will be sent to the following mailbox, and the password will be retrieved after entering the mailbox.</string>
    <string name="email_error">Incorrect mailbox format</string>
    <string name="email_send_ok_tip_start">We have been to the mailbox "</string>
    <string name="email_send_ok_tip">We have been to the mailbox "<xliff:g id="email">%1$s</xliff:g>"Sent a verifying mail. Click the mail link to verify.</string>
    <string name="find_pwd_by_email_send_ok_tip">The authentication mail has been sent to your mailbox, and the Gree account password can be retrieved by clicking the link in the mail.</string>
    <string name="i_know">Oh I see</string>
    <string name="find_pwd_by_phone_use">Use&#160;</string>
    <string name="find_pwd_by_phone">cell phone to retrieve</string>
    <string name="problem_find_pwd">Retrieve the password</string>
    <string name="problem_find_pwd_des">Retrieving the security data by binding the account</string>
    <string name="problem_common">Common problem</string>
    <string name="problem_common_des">Provide feedback on common problems and problems</string>
    <string name="problem_appeal">Account appeal</string>
    <string name="problem_appeal_des">Solve problems such as unable to retrieve passwords or account exceptions</string>
    <string name="faceback_error">Please check the existence of after-sales service applications</string>
    <string name="jump">Skip</string>
    <string name="pwd_not_right">Password error</string>
    <string name="find_pwd">Retrieve password</string>
    <string name="real_auth">Real name authentication</string>
    <string name="device_name_relu2">You can\'t use blank spaces and Emoji expression icons</string>
    <string name="net_error_get_ccid">Obtaining real name authentication information</string>
    <string name="net_error_deviceLogout">forced exit</string>
    <string name="net_error_updateDeviceName">Change the device name</string>
    <string name="net_error_delAddress">Delete address</string>
    <string name="net_error_updateAddress">Modify the address</string>
    <string name="net_error_updateResidence">Amend the place of residence</string>
    <string name="net_error_loginOut">Sign out</string>
    <string name="net_error_restEmail">Amend the mailbox</string>
    <string name="net_error_restPhone">Change the phone number</string>
    <string name="net_error_reflashToken">refresh token</string>
    <string name="net_error_upLoadHead">Upload a head image</string>
    <string name="net_error_UpdateUserBaseInfo">Modifying user information</string>
    <string name="net_error_getUserInfo">Obtaining user information</string>
    <string name="net_error_restPwd">Modify the password</string>
    <string name="net_error_checkPhoneRegister">Verify whether the phone is registered or not</string>
    <string name="net_error_findPwdByEmail">Retrieve the password according to the mailbox</string>
    <string name="net_error_findPwdByPhone">Retrieve the password according to the cell phone</string>
    <string name="net_error_login">Login in</string>
    <string name="net_error_register">Register</string>
    <string name="net_error_checkSmsCode">Verification verification code</string>
    <string name="net_error_reqSmsCode">Getting SMS authentication code</string>
    <string name="gree_user_protocols_title">Gree user agreement</string>
</resources>